--- a/styles/header.css
+++ b/styles/header.css
@@ -1,29 +1,106 @@
 .header {
-  height: 70px;
-
+  height: 58px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
 .left-section {
-  background-color: lightblue;
-  width: 150px;
+  display: flex;
+  align-items: center;
+}
+
+.hamburger-menu {
+  height: 24px;
+  margin-left: 25px;
+  margin-right: 25px;
+}
+
+.youtube-logo {
+  height: 20px;
 }
 
 .middle-section {
-  background-color: lightpink;
   flex: 1;
   margin-left: 150px;
   margin-right: 120px;
   max-width: 580px;
+  display: flex;
+  align-items: center;
+}
+
+.search-bar {
+  height: 36px;
+  flex: 1;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(192, 192, 192);
+  padding-left: 12px;
+  box-shadow: inset 0.5px 1px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  font-size: 16px;
+  width: 0;
+}
+
+.search-bar::placeholder {
+  font-family: Roboto, Arial;
+  font-size: 16px;
+}
+
+.search-button {
+  width: 65px;
+  height: 40px;
+  margin-right: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(192, 192, 192);
+  background-color: rgb(245, 245, 245);
+  margin-left: -1px;
+}
+
+.search-icon {
+  height: 24px;
+  /* width: 30px; */
+}
+
+.voice-search-button {
+  height: 41px;
+  width: 41px;
+  border: none;
+  border-radius: 20.5px;
+  background-color: rgb(246, 246, 246);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.voice-search-icon {
+  height: 24px;
 }
 
 .right-section {
-  background-color: lightblue;
-  width: 270px;
+  width: 180px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-right: 24px;
+  flex-shrink: 0;
 }
 
 .search-bar {
   display: block;
+}
+
+.upload-icon,
+.youtube-apps-icon,
+.notifications-icon {
+  height: 24px;
+}
+
+.current-user-picture {
+  height: 32px;
+  border-radius: 16px;
 }
