--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,18 @@
 .header {
   height: 58px;
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgb(220, 220, 220);
 }
 
 .left-section {
