--- a/styles/header.css
+++ b/styles/header.css
@@ -9,6 +9,8 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 100;
+
   background-color: white;
   border-bottom-width: 1px;
   border-bottom-style: solid;
@@ -108,6 +110,25 @@
 .youtube-apps-icon,
 .notifications-icon {
   height: 24px;
+}
+
+.notifications-icon-container {
+  position: relative;
+}
+
+.notifications-count {
+  position: absolute;
+  top: -2px;
+  right: -5px;
+  background-color: rgb(208, 0, 0);
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 2px;
+  padding-bottom: 2px;
+  border-radius: 9px;
 }
 
 .current-user-picture {
