--- a/styles/general.css
+++ b/styles/general.css
@@ -6,6 +6,9 @@ p {
 
 body {
   margin: 0;
-  padding-top: 80px;
-  padding-left: 80px ;
+  padding-top: 82px;
+  padding-bottom: 182px;
+  padding-left: 96px;
+  padding-right: 24px;
+  background-color: rgb(248, 248, 248);
 }
