--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -5,4 +5,28 @@
   top: 58px;
   background-color: white;
   width: 72px;
+  z-index: 200;
+  cursor: pointer;
+}
+
+.sidebar-link {
+  height: 74px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.sidebar-link:hover {
+  background-color: rgb(235, 235, 235);
+}
+
+.sidebar-link img {
+  height: 24px;
+}
+
+.sidebar-link div{
+  font-family: Roboto, Arial;
+  font-size: 10px;
+  margin-top: 5px;
 }
