--- a/styles/header.css
+++ b/styles/header.css
@@ -33,12 +33,10 @@
 }
 
 .middle-section {
-  flex: 1;
-  margin-left: 150px;
-  margin-right: 120px;
-  max-width: 580px;
   display: flex;
   align-items: center;
+  flex: 1;
+  max-width: 480px;
 }
 
 .search-bar {
@@ -51,11 +49,10 @@
   box-shadow: inset 0.5px 1px 1px rgba(0, 0, 0, 0.1);
   border-radius: 2px;
   font-size: 16px;
-  width: 0;
+  /* width: 0px; */
 }
 
 .search-bar::placeholder {
-  font-family: Roboto, Arial;
   font-size: 16px;
 }
 
@@ -147,7 +144,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: Roboto, Arial;
 }
 
 .search-bar {
@@ -166,7 +162,6 @@
   right: -5px;
   background-color: rgb(208, 0, 0);
   color: white;
-  font-family: Roboto, Arial;
   font-size: 10px;
   padding-left: 5px;
   padding-right: 5px;
